--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -6,7 +6,8 @@
 big {
   font-size: larger; }
 
-blockquote {
+blockquote,
+.prose blockquote {
   display: block;
   line-height: 20px;
   background: #f8f8f8;
@@ -14,14 +15,18 @@ blockquote {
   border: 1px solid #eee;
   border-left: 5px solid #eee;
   font-style: italic;
-  margin: 1em 2em;
+  margin: 1em 7%;
   quotes: '\201c' '\201d'; }
-  blockquote:before {
+  blockquote:before,
+  .prose blockquote:before {
     content: none; }
-  blockquote:after {
+  blockquote:after,
+  .prose blockquote:after {
     content: none; }
-  blockquote p:nth-child(n+2):not([class]) {
-    padding-left: 2em; }
+  @media (min-width: 750px) {
+    blockquote p:nth-child(n+2):not([class]),
+    .prose blockquote p:nth-child(n+2):not([class]) {
+      padding-left: 2em; } }
 
 code {
   font-family: monospace; }
