--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4240,4 +4240,19 @@ form#user-login, form#user-pass {
   border-radius: 10px;
   border: 2px solid lightgrey;
   margin-bottom: 1em; }
+
+.pane-node-links {
+  font-size: 0.9em; }
+  .pane-node-links .links {
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
 /*# sourceMappingURL=dgr_rubik_style.css.map */
