--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4188,9 +4188,6 @@ input.form-submit {
           align-items: center; }
   #mini-panel-footer .copyright,
   #mini-panel-footer .pane-menu-menu-footer-links {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 100%;
-            flex: 1 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
@@ -4201,10 +4198,19 @@ input.form-submit {
             -ms-flex: 1 50%;
                 flex: 1 50%;
         min-width: 455px; } }
+  #mini-panel-footer .copyright {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 236px;
+            flex: 0 236px;
+    min-width: 236px; }
   #mini-panel-footer .pane-menu-menu-footer-links {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
-            justify-content: flex-end; }
+            justify-content: flex-end;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 404px;
+            flex: 1 404px;
+    min-width: 404px; }
     #mini-panel-footer .pane-menu-menu-footer-links a {
       color: black; }
       #mini-panel-footer .pane-menu-menu-footer-links a:hover {
