--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4194,28 +4194,38 @@ input.form-submit {
     -webkit-box-flex: 1;
         -ms-flex: 1 100%;
             flex: 1 100%; }
-  @media (min-width: 700px) {
-    #mini-panel-footer .copyright {
-      -webkit-box-flex: 0;
-          -ms-flex: 0 236px;
-              flex: 0 236px;
-      min-width: 236px;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center; } }
+  #mini-panel-footer .copyright {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 100%;
+            flex: 1 100%; }
+    @media (min-width: 700px) {
+      #mini-panel-footer .copyright {
+        -webkit-box-flex: 0;
+            -ms-flex: 0 236px;
+                flex: 0 236px;
+        min-width: 236px;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center; } }
   #mini-panel-footer .pane-menu-menu-footer-links {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end; }
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 100%;
+            flex: 1 100%; }
     @media (min-width: 700px) {
       #mini-panel-footer .pane-menu-menu-footer-links {
         -webkit-box-flex: 1;
             -ms-flex: 1 404px;
                 flex: 1 404px;
         min-width: 404px;
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center; } }
+        -webkit-box-pack: end;
+            -ms-flex-pack: end;
+                justify-content: flex-end; } }
     #mini-panel-footer .pane-menu-menu-footer-links a {
       color: black; }
       #mini-panel-footer .pane-menu-menu-footer-links a:hover {
