--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4217,6 +4217,15 @@ input.form-submit {
     -webkit-box-flex: 1;
         -ms-flex: 1 100%;
             flex: 1 100%; }
+    @media (min-width: 437px) and (max-width: 699px) {
+      #mini-panel-footer .pane-menu-menu-footer-links .menu li {
+        display: inline-block;
+        margin-left: 0;
+        float: left;
+        width: 50%;
+        clear: none;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box; } }
     @media (min-width: 700px) {
       #mini-panel-footer .pane-menu-menu-footer-links {
         -webkit-box-flex: 1;
