Centering social widgets

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1505,7 +1505,7 @@ table.views-table .pane-user-field-identification {
       display: inline-block;
       margin-right: 5px;
       float: none; }
-      #block-panels-mini-header .row-one .pane-widgets-s-socialmedia-share-default .widgets-element:last-child {
+      #block-panels-mini-header .row-one .pane-widgets-s-socialmedia-share-default .widgets-element:last-of-type {
         margin-right: 0; }
   #block-panels-mini-header .row-one .middle-column {
     -webkit-box-align: center;
