--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2273,7 +2273,7 @@ table.views-table {
       margin-right: 5px;
       float: none;
 
-      &:last-child {
+      &:last-of-type {
         margin-right: 0;
       }
     }
