--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2272,10 +2272,10 @@ table.views-table {
       display: inline-block;
       margin-right: 5px;
       float: none;
+    }
 
-      &:last-of-type {
-        margin-right: 0;
-      }
+    #widgets-element-socialmedia_addthis-email {
+      margin-right: 0;
     }
   }
 
