--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -165,7 +165,7 @@ body.tao {
     vertical-align: middle;
     margin-right: 5px;
 
-    a {
+    a, strong {
       color: black;
       font-weight: normal;
       float: left;
