--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -478,10 +478,10 @@ ul.panels-ipe-linkbar li {
   list-style: none;
   margin-left: 0; }
 
-ul.primary-tabs {
+ul.primary-tabs.links {
   text-transform: capitalize; }
-  ul.primary-tabs li.active a {
-    text-shadow: #dbdcdf 0 1px 0; }
+  ul.primary-tabs.links > li.active > a {
+    text-shadow: black 0 1px 0; }
 
 ul.secondary-tabs.links:hover li, ul.secondary-tabs.links:hover li a {
   float: none; }
@@ -495,7 +495,8 @@ ul.secondary-tabs {
     float: none;
     height: 0px;
     position: relative;
-    top: -20px; }
+    top: -20px;
+    text-shadow: #777 0 1px 0; }
     ul.secondary-tabs li a:hover {
       background: grey; }
   ul.secondary-tabs li.active a {
