--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -596,11 +596,11 @@ ul.panels-ipe-linkbar li {
   }
 }
 
-ul.primary-tabs {
+ul.primary-tabs.links {
   text-transform: capitalize;
 
-  li.active a {
-    text-shadow: #dbdcdf 0 1px 0;
+  > li.active > a {
+    text-shadow: black 0 1px 0;
   }
 }
 
@@ -621,6 +621,7 @@ ul.secondary-tabs {
     height: 0px;
     position: relative;
     top: -20px;
+    text-shadow: #777 0 1px 0;
 
     &:hover {
       background: grey;
