Update tabs colors

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4273,7 +4273,7 @@ div#panels-ipe-control-container {
 .breadcrumb-link a {
   color: #333; }
 
-.pager li.pager-current, .primary-tabs li.active {
+.pager li.pager-current, .primary-tabs > li.active {
   background-color: grey; }
 
 form#user-login, form#user-pass {
