--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -614,6 +614,7 @@ ul.secondary-tabs.links {
   height: 20px;
   overflow: hidden;
   background: #c5c5c5;
+  opacity: 1;
 
   > li > a {
     display: block;
