--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1532,9 +1532,6 @@ table.views-table .pane-user-field-identification {
     position: relative; }
   #block-panels-mini-header .row-one .right-column,
   #block-panels-mini-header .row-one .left-column {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 175px;
-            flex: 1 175px;
     margin: 0 1em;
     -webkit-box-align: end;
         -ms-flex-align: end;
@@ -1551,6 +1548,24 @@ table.views-table .pane-user-field-identification {
       border: 1px solid #ccc;
       padding: 0.5em;
       width: 100%; }
+    @media (min-width: 1105px) {
+      #block-panels-mini-header .row-one .right-column,
+      #block-panels-mini-header .row-one .left-column {
+        -webkit-box-flex: 1;
+            -ms-flex: 1 23%;
+                flex: 1 23%; } }
+    @media (min-width: 1210px) {
+      #block-panels-mini-header .row-one .right-column,
+      #block-panels-mini-header .row-one .left-column {
+        -webkit-box-flex: 1;
+            -ms-flex: 1 20%;
+                flex: 1 20%; } }
+    @media (min-width: 1280px) {
+      #block-panels-mini-header .row-one .right-column,
+      #block-panels-mini-header .row-one .left-column {
+        -webkit-box-flex: 1;
+            -ms-flex: 1 25%;
+                flex: 1 25%; } }
   #block-panels-mini-header .row-one .menu-name-user-menu ul li {
     margin-left: 0;
     white-space: nowrap;
@@ -4078,7 +4093,7 @@ input.form-submit {
       text-align: center;
       padding: 5px 10px;
       font-weight: bold;
-      font-size: 0.8em;
+      font-size: 1em;
       line-height: 1;
       line-height: 20px;
       border: 0;
@@ -4094,10 +4109,6 @@ input.form-submit {
         background: none;
         color: #1F45FC;
         text-decoration: underline; }
-      @media (min-width: 1127) {
-        #block-superfish-1 #superfish-1 li a,
-        .pane-superfish-1 #superfish-1 li a {
-          font-size: 0.9em; } }
       @media (min-width: 1159px) {
         #block-superfish-1 #superfish-1 li a,
         .pane-superfish-1 #superfish-1 li a {
