--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1521,9 +1521,9 @@ table.views-table .pane-user-field-identification {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-flex: 1;
-        -ms-flex: 1 100%;
-            flex: 1 100%;
+    -webkit-box-flex: 2;
+        -ms-flex: 2 40%;
+            flex: 2 40%;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -1541,7 +1541,13 @@ table.views-table .pane-user-field-identification {
     display: flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
-            justify-content: center; }
+            justify-content: center;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 50%;
+            flex: 1 50%;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0; }
     #block-panels-mini-header .row-one .right-column .inner,
     #block-panels-mini-header .row-one .left-column .inner {
       height: 140px;
@@ -1553,7 +1559,10 @@ table.views-table .pane-user-field-identification {
       #block-panels-mini-header .row-one .left-column {
         -webkit-box-flex: 1;
             -ms-flex: 1 23%;
-                flex: 1 23%; } }
+                flex: 1 23%;
+        -webkit-box-ordinal-group: 2;
+            -ms-flex-order: 1;
+                order: 1; } }
     @media (min-width: 1210px) {
       #block-panels-mini-header .row-one .right-column,
       #block-panels-mini-header .row-one .left-column {
