--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1547,8 +1547,8 @@ table.views-table .pane-user-field-identification {
         -ms-flex-pack: center;
             justify-content: center;
     -webkit-box-flex: 1;
-        -ms-flex: 1 50%;
-            flex: 1 50%;
+        -ms-flex: 1 40%;
+            flex: 1 40%;
     -webkit-box-ordinal-group: 1;
         -ms-flex-order: 0;
             order: 0; }
@@ -1564,9 +1564,9 @@ table.views-table .pane-user-field-identification {
         -webkit-box-flex: 0;
             -ms-flex: 0 23%;
                 flex: 0 23%;
-        -webkit-box-ordinal-group: 2;
-            -ms-flex-order: 1;
-                order: 1; } }
+        -webkit-box-ordinal-group: initial;
+            -ms-flex-order: initial;
+                order: initial; } }
     @media (min-width: 1210px) {
       #block-panels-mini-header .row-one .right-column,
       #block-panels-mini-header .row-one .left-column {
