--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1528,15 +1528,26 @@ table.views-table .pane-user-field-identification {
     -webkit-box-flex: 2;
         -ms-flex: 2 40%;
             flex: 2 40%;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
     border: 1px solid #ccc;
     padding: 0.5em;
     position: relative; }
+    @media (min-width: 1105px) {
+      #block-panels-mini-header .row-one .middle-column {
+        -webkit-box-ordinal-group: initial;
+            -ms-flex-order: initial;
+                order: initial; } }
+  #block-panels-mini-header .row-one .right-column {
+    margin-right: 0; }
+  #block-panels-mini-header .row-one .left-column {
+    margin-left: 0; }
   #block-panels-mini-header .row-one .right-column,
   #block-panels-mini-header .row-one .left-column {
-    margin: 0 1em;
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
@@ -1551,7 +1562,8 @@ table.views-table .pane-user-field-identification {
             flex: 1 40%;
     -webkit-box-ordinal-group: 1;
         -ms-flex-order: 0;
-            order: 0; }
+            order: 0;
+    margin-bottom: 1em; }
     #block-panels-mini-header .row-one .right-column .inner,
     #block-panels-mini-header .row-one .left-column .inner {
       height: 140px;
@@ -1566,7 +1578,8 @@ table.views-table .pane-user-field-identification {
                 flex: 0 23%;
         -webkit-box-ordinal-group: initial;
             -ms-flex-order: initial;
-                order: initial; } }
+                order: initial;
+        margin: 0 1em; } }
     @media (min-width: 1210px) {
       #block-panels-mini-header .row-one .right-column,
       #block-panels-mini-header .row-one .left-column {
