--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2294,21 +2294,32 @@ table.views-table {
     align-items: center;
     display: flex;
     flex: 2 40%;
-
+    order: 1;
     justify-content: center;
     border: 1px solid #ccc;
     padding: 0.5em;
     position: relative;
+
+    @include breakpoint(1105px) {
+      order: initial;
+    }
+  }
+
+  .right-column {
+    margin-right: 0;
+  }
+  .left-column {
+    margin-left: 0;
   }
 
   .right-column,
   .left-column {
-    margin: 0 1em;
     align-items: flex-end;
     display: flex;
     justify-content: center;
     flex: 1 40%;
     order: 0;
+    margin-bottom: 1em;
 
     .inner {
       height: 140px;
@@ -2320,6 +2331,7 @@ table.views-table {
     @include breakpoint(1105px) {
       flex: 0 23%;
       order: initial;
+      margin: 0 1em;
     }
     @include breakpoint(1210px) {
       flex: 0 20%;
