--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2307,9 +2307,11 @@ table.views-table {
 
   .right-column {
     margin-right: 0;
+    margin-left: 0.5em;
   }
   .left-column {
     margin-left: 0;
+    margin-right: 0.5em;
   }
 
   .right-column,
