--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -479,8 +479,9 @@ ul.panels-ipe-linkbar li {
   margin-left: 0; }
 
 ul.primary-tabs.links {
-  text-transform: capitalize;
-  text-shadow: #fff 0 1px 0; }
+  text-transform: capitalize; }
+  ul.primary-tabs.links > li > a {
+    text-shadow: #fff 0 1px 0; }
   ul.primary-tabs.links > li.active > a {
     text-shadow: black 0 1px 0; }
 
