--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -598,7 +598,10 @@ ul.panels-ipe-linkbar li {
 
 ul.primary-tabs.links {
   text-transform: capitalize;
-  text-shadow: #fff 0 1px 0;
+
+  > li > a {
+    text-shadow: #fff 0 1px 0;
+  }
 
   > li.active > a {
     text-shadow: black 0 1px 0;
