--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2216,7 +2216,7 @@ table.views-table {
   .pane-page-site-name {
     font-size: 1.5em ;
     line-height: 1;
-    margin: 10px 0;
+    margin-botom: 10px;
     text-align: center;
     font-family: Georgia, "Book Antiqua", serif;
 
@@ -2311,6 +2311,12 @@ table.views-table {
   .right-column {
     margin-right: 0;
     margin-left: 0.5em;
+
+    @include breakpoint(1105px) {
+      .inner > div {
+        flex: 100%;
+      }
+    }
   }
   .left-column {
     margin-left: 0;
@@ -2337,6 +2343,12 @@ table.views-table {
       flex: 0 14%;
       order: initial;
       margin: 0 1em;
+
+      .inner {
+        align-items: flex-end;
+        display: flex;
+        flex-flow: row wrap;
+      }
     }  
   }
 
@@ -3841,6 +3853,7 @@ input.form-submit {
     justify-content: center;
     display: flex;
     flex-flow: row wrap;
+    height: 1em;
 
     >li {
       &:first-child,
@@ -3867,7 +3880,7 @@ input.form-submit {
         background-image: none;
         color: #858484;
         text-align: center;
-        padding: 5px 10px;
+        padding: 0 10px;
         font-weight: bold;
         font-size: 1em;
         line-height: 1;
