--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2348,6 +2348,7 @@ table.views-table {
         align-items: flex-end;
         display: flex;
         flex-flow: row wrap;
+        justify-content: center;
       }
     }  
   }
