--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2208,6 +2208,7 @@ table.views-table {
   flex-flow: row wrap;
   width: 100%;
   margin-bottom: 0px;
+  background: none;
 
   .block-content {
     width: 100%;
