--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2344,6 +2344,7 @@ table.views-table {
       flex: 0 14%;
       order: initial;
       margin: 0 1em;
+      min-width: 160px;
 
       .inner {
         align-items: flex-end;
