--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2319,12 +2319,20 @@ table.views-table {
       .inner > div:nth-child(2) {
         display: inline-block;
         width: 50%;
+        vertical-align: middle;
       }
       .inner > div:nth-child(3) {
         display: inline-block;
         width: 50%;
+        vertical-align: middle;
 
+        .widgets-element {
+          width: 25px;
 
+          img {
+            width: 25px;
+          }
+        }
       }
     }
 
