--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1528,9 +1528,9 @@ table.views-table .pane-user-field-identification {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-flex: 2;
-        -ms-flex: 2 50%;
-            flex: 2 50%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 100%;
+            flex: 1 100%;
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
@@ -1544,7 +1544,10 @@ table.views-table .pane-user-field-identification {
       #block-panels-mini-header .row-one .middle-column {
         -webkit-box-ordinal-group: initial;
             -ms-flex-order: initial;
-                order: initial; } }
+                order: initial;
+        -webkit-box-flex: 2;
+            -ms-flex: 2 50%;
+                flex: 2 50%; } }
   #block-panels-mini-header .row-one .right-column {
     margin-right: 0;
     margin-left: 0.5em; }
@@ -1580,12 +1583,13 @@ table.views-table .pane-user-field-identification {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -webkit-box-flex: 1;
-        -ms-flex: 1 45%;
-            flex: 1 45%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 230px;
+            flex: 0 230px;
     -webkit-box-ordinal-group: 1;
         -ms-flex-order: 0;
             order: 0;
+    margin: auto;
     margin-bottom: 1em; }
     #block-panels-mini-header .row-one .right-column .inner,
     #block-panels-mini-header .row-one .left-column .inner {
