--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1574,28 +1574,32 @@ table.views-table .pane-user-field-identification {
     margin-right: 0.5em; }
   #block-panels-mini-header .row-one .right-column,
   #block-panels-mini-header .row-one .left-column {
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 230px;
-            flex: 0 230px;
-    -webkit-box-ordinal-group: 1;
-        -ms-flex-order: 0;
-            order: 0;
-    margin: auto;
-    margin-bottom: 1em; }
+    display: none; }
     #block-panels-mini-header .row-one .right-column .inner,
     #block-panels-mini-header .row-one .left-column .inner {
       border: 1px solid #ccc;
       padding: 0.5em;
       width: 100%; }
+    @media (min-width: 480px) {
+      #block-panels-mini-header .row-one .right-column,
+      #block-panels-mini-header .row-one .left-column {
+        -webkit-box-align: end;
+            -ms-flex-align: end;
+                align-items: flex-end;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 230px;
+                flex: 0 230px;
+        -webkit-box-ordinal-group: 1;
+            -ms-flex-order: 0;
+                order: 0;
+        margin: auto;
+        margin-bottom: 1em; } }
     @media (min-width: 1105px) {
       #block-panels-mini-header .row-one .right-column,
       #block-panels-mini-header .row-one .left-column {
