--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2350,18 +2350,22 @@ table.views-table {
 
   .right-column,
   .left-column {
-    align-items: flex-end;
-    display: flex;
-    justify-content: center;
-    flex: 0 230px;
-    order: 0;
-    margin: auto;
-    margin-bottom: 1em;
+    display: none;
 
     .inner {
       border: 1px solid #ccc;
       padding: 0.5em;
       width: 100%;
+    }
+
+    @include breakpoint(480px) {
+      align-items: flex-end;
+      display: flex;
+      justify-content: center;
+      flex: 0 230px;
+      order: 0;
+      margin: auto;
+      margin-bottom: 1em;
     }
 
     @include breakpoint(1105px) {
