--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2286,9 +2286,14 @@ table.views-table {
     text-align: center;
 
     .widgets-element {
-      display: inline-block;
-      margin-right: 5px;
+      display: block;
+      margin: 0;
       float: none;
+
+      @include breakpoint(480px) {
+        display: inline-block;
+        margin-right: 5px;
+      }
     }
 
     #widgets-element-socialmedia_addthis-email {
@@ -2305,6 +2310,26 @@ table.views-table {
     border: 1px solid #ccc;
     padding: 0.5em;
     position: relative;
+
+    .inner {
+      width: calc(100% - 37px);
+
+      > div:last-child {
+        display: inline-block;
+        position: absolute;
+        top: 10px;
+        right: 5px;
+      }
+
+      @include breakpoint(480px) {
+        width: 100%;
+
+        > div:last-child {
+          display: block;
+          position: initial;
+        }
+      }
+    }
 
     @include breakpoint(1105px) {
       order: initial;
@@ -2365,7 +2390,7 @@ table.views-table {
       flex: 0 230px;
       order: 0;
       margin: auto;
-      margin-bottom: 1em;
+      margin-bottom: 0.5em;
     }
 
     @include breakpoint(1105px) {
