--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -830,7 +830,7 @@ body.maintenance-page {
   body.maintenance-page #site-slogan {
     font-size: 1em;
     line-height: 1;
-    margin: 20px 0;
+    margin: 10px 0;
     text-align: center;
     font-family: Georgia, "Book Antiqua", serif; }
     @media (min-width: 295px) {
@@ -839,6 +839,9 @@ body.maintenance-page {
     @media (min-width: 400px) {
       body.maintenance-page #site-slogan {
         font-size: 1.5em; } }
+    @media (min-width: 480px) {
+      body.maintenance-page #site-slogan {
+        margin: 20px 0; } }
     @media (min-width: 1024px) {
       body.maintenance-page #site-slogan {
         font-size: 2.2em; } }
