--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -1033,7 +1033,7 @@ body.maintenance-page {
   #site-slogan {
     font-size: 1em;
     line-height: 1;
-    margin: 20px 0;
+    margin: 10px 0;
     text-align: center;
     font-family: Georgia, "Book Antiqua", serif;
 
@@ -1043,6 +1043,10 @@ body.maintenance-page {
 
     @include breakpoint(400px) {
       font-size: 1.5em;
+    }
+
+    @include breakpoint(480px) {
+      margin: 20px 0;
     }
 
     @include breakpoint(1024px) {
